--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -1,9 +1,6 @@
-// $primary-color: #1A237E;
-$primary-color: #FC6B26;
-$primary-light-color: #FDAB83;
-$primary-dark-color: #fa590f;
-$secondary-color: #1EDD88;
-$secondary-dark-color: #1BCB7F;
+$primary-color: #1A237E;
+$primary-dark-color: #141a5c;
+$secondary-color: #3D5A80;
 $accent-color:#EE6C4D;
 $danger-color: #A10000;
 $background-color:#E0FBFC;
@@ -16,9 +13,5 @@ $background-color:#E0FBFC;
 }
 
 :root {
-  font-size: 16px;
-}
-
-.container {
-  margin-bottom: 1rem;
+  font-size: 15px;
 }
