--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -1,8 +1,5 @@
 <div class='container'>
-  <div class='flex-space-between'>
-  <h1 class='header'>Coach Lessons</h1>
-  <%= link_to('New Lesson', new_coach_lesson_path, class:"btn btn-primary") %>
-  </div>
+  <%= link_to('New Lesson', new_coach_lesson_path, class:"header btn btn-primary ") %>
   <div class='lesson-header-links'>
     <%= link_to('All', coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(coach_lessons_path)}") %>
     <%= link_to('Upcoming', upcoming_coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(upcoming_coach_lessons_path)}") %>
@@ -36,7 +33,7 @@
                       coach_lesson_path(lesson),
                       method: :delete,
                       data: { confirm: "Are you sure?" },
-                      class: "btn btn-outline-danger btn-sm" %>
+                      class: "btn btn-outline-secondary btn-sm" %>
         </div>
 
 
