--- a/app/views/coach/lessons/edit.html.erb
+++ b/app/views/coach/lessons/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container form'>
   <div class='header header-flex'>
     <h2>Edit lesson</h2>
-    <%= link_to "Back", :back, class:"back-btn" %>
+    <%= link_to "Back", :back, class:"btn btn-flat" %>
   </div>
   <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
       <%= f.input :start_date_time, :as => :datetime %>
