--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,5 @@
 .header {
   margin: 1rem 0;
-  text-shadow: 0px 1px, 1px 0px, 1px 1px;
-  color: $primary-color;
 }
 
 .header-flex {
@@ -9,20 +7,11 @@
   justify-content: space-between;
 }
 
-// .form {
-//   animation: appear 500ms ease-in;
-//   background-color: white;
-//   padding: 1rem;
-// }
-
-.form
-{
-  margin-top: 1rem;
+.form {
   animation: appear 500ms ease-in;
-  background-color: white;
-  padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
+
+
 
 @keyframes appear {
   from {
