--- a/app/views/coach_profiles/edit.html.erb
+++ b/app/views/coach_profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='form container'>
   <div class='header header-flex'>
     <h2>Edit coach profile</h2>
-    <%= link_to "Back", :back, class:"back-btn" %>
+    <%= link_to "Back", :back, class:"btn btn-flat" %>
   </div>
   <%= render "form", coach_profile: @coach_profile, user: @user %>
 </div>
