--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
 
-  <div class="coach-card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/?sport)">
+  <div class="coach-card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(@sport.picture_url) %>)">
     <h1><strong><%= @sport.name.capitalize %> Coaches</strong></h1>
   </div>
 
