--- a/app/assets/stylesheets/components/_coach-card.scss
+++ b/app/assets/stylesheets/components/_coach-card.scss
@@ -31,6 +31,19 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  transition: ease 0.3s;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+  &:hover {
+    transform: translateY(5px);
+  }
 }
 
 .coach-card img {
