--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,11 +2,26 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: $secondary-color;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
-  background: #1BCB7F;
+  background: $secondary-dark-color;
   color: white;
+}
+
+.back-btn {
+  color: $primary-color;
+  padding: .5rem 0;
+  transition: 0.3s ease;
+  font-size: 1.2rem;
+  &:hover {
+    text-decoration: none;
+    color: $primary-light-color;
+  }
+}
+
+.back-btn {
+
 }
