updated coach profile policies and routes

--- a/app/views/coach/coach_profiles/_form.html.erb
+++ b/app/views/coach/coach_profiles/_form.html.erb
@@ -1,5 +1,5 @@
 <div class='form'>
-<%= simple_form_for [ user, coach_profile ] do |f| %>
+<%= simple_form_for [ coach_profile ] do |f| %>
   <%= f.input :coach_start_date %>
   <%= f.input :description %>
   <%= f.association :sport %>
