--- a/app/views/coach/coach_profiles/show.html.erb
+++ b/app/views/coach/coach_profiles/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
 <h2>Coach Profile Page</h2>
   <div class="user-information m-2 p-2">
@@ -21,14 +20,16 @@
     </div>
   </div>
   <hr>
-  <% if policy(@coach_profile).destroy? %>
-  <div class="user-action">
-    <%= link_to 'edit', edit_user_coach_profile_path, class: "btn btn-primary"  %>
-    <%= link_to "Delete",
-                          user_coach_profile_path(@user),
-                          method: :delete,
-                          data: { confirm: "Are you sure?" },
-                          class: "btn btn-danger" %>
-  </div>
-  <% end %>
+    <div class="user-action">
+      <% if policy([:coach, @coach_profile]).edit? %>
+        <%= link_to 'edit', edit_coach_profile_path(@coach_profile), class: "btn btn-primary"  %>
+      <% end %>
+      <% if policy([:coach, @coach_profile]).destroy? %>
+        <%= link_to "Delete",
+                              coach_profile_path(@coach_profile),
+                              method: :delete,
+                              data: { confirm: "Are you sure?" },
+                              class: "btn btn-danger" %>
+    <% end %>
+    </div>
 </div>
