--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='flex-space-between'>
   <h1 class='header'>Coach Lessons</h1>
-  <%= link_to('New Lesson', new_coach_lesson_path, class:"btn btn-primary") %>
+  <%= link_to('New Lesson', new_coach_lesson_path, class:"btn btn-flat") %>
   </div>
   <div class='lesson-header-links'>
     <%= link_to('All', coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(coach_lessons_path)}") %>
@@ -19,7 +19,7 @@
           <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
         </div>
         <div class="lesson-details">
-          <strong>Class</strong>
+          <strong><%= lesson.coach.sport.name.capitalize %> Class</strong>
           <% if lesson.student_id %>
             <span>Booked by: <%= lesson.student.name %></span>
           <% end %>
