--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,24 +4,47 @@
   border-radius: 4px;
   background: $secondary-color;
   transition: background 0.3s ease;
-}
 
-.btn-flat:hover {
-  background: $secondary-dark-color;
-  color: white;
-}
-
-.back-btn {
-  color: $primary-color;
-  padding: .5rem 0;
-  transition: 0.3s ease;
-  font-size: 1.2rem;
   &:hover {
-    text-decoration: none;
-    color: $primary-light-color;
+    background: $secondary-dark-color;
+    color: white;
   }
 }
 
 .back-btn {
+  color: $primary-light-color;
+  padding: .5rem 0;
+  transition: 0.3s ease;
+  font-size: 1.2rem;
 
+  &:hover {
+    text-decoration: none;
+    color: $primary-color;
+  }
+}
+
+.btn-primary {
+  background-color: $primary-color;
+  color: white;
+  border: 1px solid white;
+
+  &:hover {
+    background-color: $primary-dark-color;
+    border: 1px solid white;
+  }
+
+  &:focus {
+    background-color: $primary-dark-color !important;
+    border: 1px solid white !important;
+    box-shadow: none !important;
+  }
+}
+
+.btn-unavailable {
+  padding: 8px 24px;
+  border-radius: 4px;
+  background:#3333;
+  color: white;
+  text-align: center;
+  width: 9rem;
 }
