--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -96,18 +96,18 @@
   text-decoration: none;
   margin: 0.5rem;
   padding: .5rem;
-  color: black;
+  color: #333333;
 
   &:hover {
     text-decoration: none;
-    color: black;
+    color: #333333;
    }
   &::after {
     content: '';
     display: block;
     width: 0;
     height: 1.5px;
-    background: black;
+    background: $primary-dark-color;
     transition: width .4s ease-in;
   }
   &:hover::after{
@@ -119,7 +119,7 @@
     display: block;
     width: 100% !important;
     height: 1.5px;
-    background: black;
+    background: $primary-dark-color;
   }
 }
 
