--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,7 +27,7 @@
 .nav-link {
   margin: 0;
   color: white !important;
-  font-size: bold;
+  font-weight: 500;
 
   &::after {
     content: '';
@@ -48,10 +48,6 @@
     height: 1.5px;
     background: white;
   }
-
-  // &.active {
-  //   background-color: $primary-dark-color;
-  // }
 }
 
 .hide {
@@ -89,4 +85,17 @@
   padding-top: 8px;
   padding-right: 8px;
   font-size: 12px;
+}
+
+.custom-control-input:focus ~
+.custom-control-label::before {
+  border-color: $secondary-dark-color !important;
+  box-shadow: 0 0 0 0rem rgba(0, 0, 0, 0) !important;
+}
+
+
+.custom-control-input:checked ~
+.custom-control-label::before {
+  border-color: $secondary-dark-color !important;
+  background-color: $secondary-dark-color !important;
 }
