edited lessons list page and toggle button

--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -3,21 +3,26 @@
   align-items: center;
   justify-content: flex-start;
   background: white;
-  box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   margin-bottom: 8px;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 8px;
   padding-bottom: 8px;
+  transition: 400ms ease-in;
   // animation: slide-down 300ms ease-out forwards;
+
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    // background-color: #fff4ef;
+  }
 }
 
 .border-green {
   border-left: 8px solid green;
 }
 
-.border-black {
-  border-left: 8px solid black;
+.border-red {
+  border-left: 8px solid $danger-color;
 }
 
 .flex-space-between {
@@ -95,8 +100,9 @@
 .lesson-header-link {
   text-decoration: none;
   margin: 0.5rem;
-  padding: .5rem;
+  padding:0.5rem;
   color: #333333;
+  font-weight: bold;
 
   &:hover {
     text-decoration: none;
@@ -106,7 +112,7 @@
     content: '';
     display: block;
     width: 0;
-    height: 1.5px;
+    height: 2px;
     background: $primary-dark-color;
     transition: width .4s ease-in;
   }
@@ -118,7 +124,7 @@
     content: '';
     display: block;
     width: 100% !important;
-    height: 1.5px;
+    height: 2px;
     background: $primary-dark-color;
   }
 }
