--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -17,6 +17,11 @@ $background-color:#E0FBFC;
 
 :root {
   font-size: 16px;
+  line-height: 1.6;
+}
+
+body {
+  background-color: rgb(247, 247, 247);
 }
 
 .container {
