--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -12,7 +12,7 @@
       <div class='lesson-header-links'><h4>No lessons available</h4></div>
     <% end %>
     <% @lessons.each do |lesson| %>
-      <div class="lesson-card <%= lesson.status ? 'border-green' : 'border-black' %>">
+      <div class="lesson-card <%= lesson.status ? 'border-green' : 'border-red' %>">
         <div class="lesson-date">
           <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
           <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
