added user updated page

--- a/app/views/coach/coach_profiles/show.html.erb
+++ b/app/views/coach/coach_profiles/show.html.erb
@@ -29,7 +29,7 @@
                               coach_profile_path(@coach_profile),
                               method: :delete,
                               data: { confirm: "Are you sure?" },
-                              class: "btn btn-danger" %>
+                              class: "btn btn-outline-danger" %>
     <% end %>
     </div>
 </div>
