--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,5 @@
 <div class='container form'>
+  <%= link_to "Back", :back %>
   <h2 class='header'>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -41,13 +42,14 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update", class: 'btn btn-primary' %>
+      <%= f.button :submit, "Update", class: 'btn btn-primary round' %>
     </div>
   <% end %>
 
-  <h3>Cancel my account</h3>
+  <hr>
+  <%= link_to "Cancel my account", registration_path(resource_name),
+      data: { confirm: "Are you sure?" },
+      method: :delete,
+      class: "btn btn-outline-danger btn-sm" %>
 
-  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <%= link_to "Back", :back %>
 </div>
