--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,8 @@
 <div class='container form'>
-  <%= link_to "Back", :back %>
-  <h2 class='header'>Edit <%= resource_name.to_s.humanize %></h2>
+  <div class='header header-flex'>
+    <h2 class='header'>Edit <%= resource_name.to_s.humanize %></h2>
+    <%= link_to "Back", :back, class:"back-btn" %>
+  </div>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
