--- a/app/views/coach/coach_profiles/show.html.erb
+++ b/app/views/coach/coach_profiles/show.html.erb
@@ -1,14 +1,17 @@
 <div class="container">
-<h2>Coach Profile Page</h2>
-  <div class="user-information m-2 p-2">
+  <div class='header header-flex'>
+    <h1>My Coach Profile</h1>
+    <%= link_to "Back", :back, class:"back-btn" %>
+  </div>
+  <div class="user-information">
     <div class="profile d-flex">
       <div class="profile-picture m-2 p-2">
         <img src="https://via.placeholder.com/150" alt="">
       </div>
       <div class="profile-description  m-2 p-2">
 
-        <p>Coach profile description: <%= @coach_profile.description %></p>
-        <p>Coach's sport: <%= @coach_profile.sport.name %></p>
+        <p><strong>Description:</strong> <%= @coach_profile.description %></p>
+        <p><strong>Sport:</strong> <%= @coach_profile.sport.name.capitalize %></p>
       </div>
     </div>
     <div class="image-container d-flex p-2 m-2">
@@ -22,7 +25,7 @@
   <hr>
     <div class="user-action">
       <% if policy([:coach, @coach_profile]).edit? %>
-        <%= link_to 'edit', edit_coach_profile_path(@coach_profile), class: "btn btn-primary"  %>
+        <%= link_to 'Edit', edit_coach_profile_path(@coach_profile), class: "btn btn-primary"  %>
       <% end %>
       <% if policy([:coach, @coach_profile]).destroy? %>
         <%= link_to "Delete",
