--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -19,7 +19,7 @@
           <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
         </div>
         <div class="lesson-details">
-          <strong><%= lesson.coach.sport.name.capitalize %> Class</strong>
+          <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
           <% if lesson.student_id %>
             <span>Booked by: <%= lesson.student.name %></span>
           <% end %>
