--- a/app/views/coaches/list_lessons.html.erb
+++ b/app/views/coaches/list_lessons.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="lesson-details">
-        <strong><%= lesson.coach.sport.name.capitalize %> Class</strong>
+        <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
         <span>Coach: <%= User.find(lesson.coach_id).name %></span>
         <span>Location: <%= lesson.location %></span>
       </div>
