--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -52,6 +52,9 @@
         </li>
       <% else %>
         <li class="nav-item">
+          <%= link_to "Sign Up!", new_user_registration_path, class: "btn btn-flat" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
