--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -111,7 +111,7 @@
 }
 
 .show {
-  animation: slide-down 300ms ease-out forwards;
+  animation: lessons 300ms ease-out forwards;
   display: block !important;
 }
 
@@ -122,6 +122,15 @@
 }
 
 @keyframes slide-down {
+   from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes lessons {
   from {
     opacity: 0;
     transform: scaleY(0)
