--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -51,7 +51,6 @@
 }
 
 .lesson-status.booked {
-  // background: lightgray;
   font-size: 10px;
   border-radius: 50px;
   padding: 2px 16px;
@@ -110,7 +109,7 @@
   }
 }
 
-.show {
+.show-lessons {
   animation: lessons 300ms ease-out forwards;
   display: block !important;
 }
@@ -121,16 +120,7 @@
   transform-origin: left top;
 }
 
-@keyframes slide-down {
-   from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes lessons {
+@keyframes show-lessons {
   from {
     opacity: 0;
     transform: scaleY(0)
