--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,6 +60,7 @@
 
 .dropdown-menu {
   animation: slide-down 400ms ease-in;
+  transform-origin: top;
 }
 
 .dropdown-item {
@@ -67,13 +68,14 @@
 }
 
 @keyframes slide-down {
-  0% {
+  from {
     opacity: 0;
-    transform: translateY(-60px)
+    transform: scaleY(0)
+
   }
-  100% {
+  to {
     opacity: 1;
-    transform: translateY(0)
+    transform: scaleY(1)
   }
 }
 .custom-switch {
