Powerful seeds file and coach profile picture fixed

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,11 @@
         <% end %>
 
         <li class="nav-item dropdown">
+        <% if current_user.coach_profile %>
+          <%= image_tag "https://res.cloudinary.com/dcwfy3dua/image/upload/v1639193524/sportmelite/coach%20profile%20pic/drive-download-20211211T033126Z-001/#{current_user.coach_profile.photo_key}.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% else %>
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <div class='dropdown-item'>Logged in: <strong><%= current_user.name %></strong></div>
             <%= link_to "My Profile", edit_user_registration_path, class: "dropdown-item"  %>
