--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -3,7 +3,7 @@
   <div class="user-information m-2 p-2">
     <div class="profile d-flex">
       <div class="profile-picture m-2 p-2">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img src='https://res.cloudinary.com/dcwfy3dua/image/upload/v1639193524/sportmelite/coach%20profile%20pic/drive-download-20211211T033126Z-001/<%= @coach.coach_profile.photo_key %>.jpg' class="avatar-coach" alt="">
       </div>
       <div class="profile-description  m-2 p-2">
         <h2>Coach Profile Page</h2>
