added css to coach page

--- a/app/assets/stylesheets/components/_coach-card.scss
+++ b/app/assets/stylesheets/components/_coach-card.scss
@@ -26,15 +26,14 @@
 }
 .coach-card {
   overflow: hidden;
-  height: 120px;
+  height: 160px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   transition: ease 0.3s;
+  color: black;
 
   a {
     text-decoration: none;
