--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -110,7 +110,7 @@
 }
 
 .show-lessons {
-  animation: lessons 300ms ease-out forwards;
+  animation: show-lessons 300ms ease-out forwards;
   display: block !important;
 }
 
