--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -8,7 +8,7 @@
       <div class="sport-cards">
         <% @sports.each do |sport| %>
           <%= link_to sport_coaches_path(sport) do %>
-            <div class="border text-center sport-card" style="background-image: url(<%= cl_image_path(sport.picture_url) %>);">
+            <div class="border text-center sport-card" style="background-image: url(<%= sport.picture_url %>);">
               <%= sport.name.capitalize%>
             </div>
           <% end %>
