--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -12,6 +12,9 @@
         <p><strong>Name:</strong> <%= @coach.name %></p>
         <p><strong>Description:</strong> <%= @coach.coach_profile.description %></p>
         <p><strong>Sport:</strong> <%= @coach.coach_profile.sport.name.capitalize %></p>
+        <p><strong>Reviews:</strong> <% @reviews.each do |review| %></p>
+        <%= review.content %>
+        <% end %>
       </div>
     </div>
     <div class="image-container d-flex p-2 m-2">
