--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -31,26 +31,26 @@
 <%# coach lessons  %>
 <div class="container coach-lesson-container mt-3">
   <% @lessons.each do |lesson| %>
-    <div class="lesson-card">
-      <div class="lesson-date">
-        <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
-        <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
-        <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
-      </div>
+    <% if lesson.status %>
+      <div class="lesson-card">
+        <div class="lesson-date">
+          <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
+          <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
+          <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
+        </div>
 
-      <div class="lesson-details">
-        <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
-        <span>Coach: <%= User.find(lesson.coach_id).name %></span>
-        <span>Location: <%= lesson.location %></span>
-      </div>
+        <div class="lesson-details">
+          <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
+          <span>Coach: <%= User.find(lesson.coach_id).name %></span>
+          <span>Location: <%= lesson.location %></span>
+        </div>
 
-      <div>
-        <% if lesson.status %>
-          <div class="btn-unavailable">Unavailable</div>
-        <% else %>
+        <div>
           <%= link_to "Book Lesson", make_booking_lesson_path(lesson), class:'btn-flat' %>
-        <% end %>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <span>No available lessons at the moment.</span>
+    <% end %>
   <% end %>
 </div>
