--- a/app/views/coach/lessons/_form.html.erb
+++ b/app/views/coach/lessons/_form.html.erb
@@ -1,8 +1,20 @@
-<%= simple_form_for(@lesson, method: :post, url: :coach_lessons
-) do |f|%>
-    <%= f.input :start_date_time, :as => :datetime %>
-    <%= f.input :end_date_time, :as => :datetime %>
-    <%= f.input :location %>
-    <%= f.input :price, as: :numeric %>
-    <%= f.submit class:'btn btn-primary' %>
-<% end %>
+ <div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+             <%= simple_form_for(@lesson, method: :post, url: :coach_lessons, remote: true) do |f|%>
+                <%= f.input :start_date_time, :as => :datetime %>
+                <%= f.input :end_date_time, :as => :datetime %>
+                <%= f.input :description %>
+                <%= f.input :location %>
+                <%= f.input :price, as: :numeric %>
+                <%= f.submit class:'btn btn-primary' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
