--- a/app/views/coach/lessons/edit.html.erb
+++ b/app/views/coach/lessons/edit.html.erb
@@ -4,8 +4,8 @@
     <%= link_to "Back", :back, class:"back-btn" %>
   </div>
   <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
-      <%= f.input :start_date_time, :as => :datetime %>
-      <%= f.input :end_date_time, :as => :datetime %>
+      <%= f.input :start_date_time, as: :datetime, html5: true %>
+      <%= f.input :end_date_time, as: :datetime, html5: true %>
       <%= f.input :description %>
       <%= f.input :location %>
       <%= f.input :price, as: :numeric %>
