added stripe gem, created order model/controller and payment controller
https://kitt.lewagon.com/knowledge/tutorials/stripe

--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -46,7 +46,15 @@
         </div>
 
         <div>
-          <%= link_to "Book Lesson", make_booking_lesson_path(lesson), class:'btn-flat' %>
+          <p>Price: <%= humanized_money_with_symbol(lesson.price) %></p>
+        </div>
+
+        <div>
+          <%# <%= link_to "Book Lesson", make_booking_lesson_path(lesson), class:'btn-flat' %>
+          <%= form_tag orders_path do %>
+            <%= hidden_field_tag 'lesson_id', lesson.id %>
+            <%= submit_tag 'Book Lesson', class: 'btn btn-primary' %>
+          <% end %>
         </div>
       </div>
     <% else %>
