css and frontend for order and payment

--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -29,6 +29,11 @@
   align-items: center;
 }
 
+.lesson-price {
+  padding: 20px;
+  text-align: center;
+}
+
 .lesson-details {
   display: flex;
   flex-direction: column;
