--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -45,7 +45,7 @@
           <span>Location: <%= lesson.location %></span>
         </div>
 
-        <div>
+        <div class="lesson-price">
           <p>Price: <%= humanized_money_with_symbol(lesson.price) %></p>
         </div>
 
