--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,11 +4,15 @@
       <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
       <ul class="list-unstyled">
         <li><strong>ISSUED ON</strong> <%= @order.created_at.to_date %></li>
-        <li><strong>TEDDY</strong> <%= @order.lesson.description %> [<%= @order.lesson_id %>]</li>
-        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
+        <li>Lesson: <%= @order.lesson.description %></li>
+        <li>Coach: <%= @order.lesson.coach.name %></li>
+        <li>Date/Time: <%= @order.lesson.start_date_time %></li>
+        <li>Location: <%= @order.lesson.location %></li>
+        <li>TOTAL <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
-      <p>Estimated delivery in <strong>2 business days</strong></p>
+      <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
+  </div>
     </div>
   </div>
 </div>
