--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -1,14 +1,7 @@
-<div class='container form'>
-  <div class='header header-flex'>
-    <h2>New lesson</h2>
-    <%= link_to "Back", :back, class:"back-btn" %>
-  </div>
-  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons) do |f|%>
-      <%= f.input :start_date_time, as: :datetime, html5: true %>
-      <%= f.input :end_date_time, as: :datetime, html5: true %>
-      <%= f.input :description %>
-      <%= f.input :location %>
-      <%= f.input :price, as: :numeric %>
-      <%= f.submit class:'btn btn-primary' %>
-  <% end %>
-</div>
+<%= turbo_frame_tag 'new_lesson' do %>
+  <turbo-stream target="new_lesson_form_modal" action="replace">
+    <template>
+      <%= render partial: "form" %>
+    </template>
+  </turbo-stream>
+<% end %>
