--- a/app/views/coach/lessons/test.html.erb
+++ b/app/views/coach/lessons/test.html.erb
@@ -2,8 +2,8 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"><%= lesson.coach.sport.name.capitalize %> Lesson <span>
-             <% if lesson.status %>
+            <h5 class="modal-title" id="exampleModalLabel"><%= @lesson.coach.sport.name.capitalize %> Lesson <span>
+             <% if @lesson.status %>
                 (Booked)
               <% else %>
                 (Not Booked)
@@ -13,25 +13,25 @@
             </button>
           </div>
           <div class="modal-body">
-              <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%-d.%I%p") %> - <%= lesson.end_date_time.strftime("%-d.%I%p") %> </p>
-              <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
+              <p><strong>Date/Time:</strong> <%= @lesson.start_date_time.strftime("%-d %b %Y") %> | <%= @lesson.start_date_time.strftime("%-d.%I%p") %> - <%= @lesson.end_date_time.strftime("%-d.%I%p") %> </p>
+              <p><strong>Duration:</strong> <%= ((@lesson.end_date_time - @lesson.start_date_time)/60).round() %> mins </p>
               <% if current_page?(coach_lessons_path)%>
                 <p><strong>Student:</strong>
-                <% if lesson.student %>
-                  <%= lesson.student.name %>
+                <% if @lesson.student %>
+                  <%= @lesson.student.name %>
                 <% else %>
                   No student
                 <% end %>
                 </p>
               <% else %>
                 <p><strong>Coach:</strong>
-                  <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %>
+                  <%= link_to User.find(@lesson.coach_id).name, coach_path(User.find(@lesson.coach_id))  %>
               <% end %>
-              <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
-              <p><strong>Description:</strong> <%= lesson.description %></p>
+              <p><strong>Price:</strong> $<%= @lesson.price %>/hr</p>
+              <p><strong>Description:</strong> <%= @lesson.description %></p>
           </div>
           <div class="modal-footer">
-            <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-primary") %>
+            <%= link_to('Edit', edit_coach_lesson_path(@lesson), class: "btn btn-primary") %>
           </div>
         </div>
       </div>
