--- a/app/views/coach/lessons/_form.html.erb
+++ b/app/views/coach/lessons/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for(@lesson, method: :post, url: :coach_lessons
-) do |f|%>
-    <%= f.input :start_date_time, :as => :datetime %>
-    <%= f.input :end_date_time, :as => :datetime %>
-    <%= f.input :location %>
-    <%= f.input :price, as: :numeric %>
-    <%= f.submit class:'btn btn-primary' %>
-<% end %>
+ <%= simple_form_for(coach_lessons_path, html: {class:"d-none", data: {edit_lesson_target: 'form', action: 'submit->edit-lesson#update'}}) do |f|%>
+      <%= f.input :start_date_time, :as => :datetime %>
+      <%= f.input :end_date_time, :as => :datetime %>
+      <%= f.input :description %>
+      <%= f.input :location %>
+      <%= f.input :price, as: :numeric %>
+      <%= f.submit class:'btn btn-primary' %>
+  <% end %>
