--- a/app/views/coach/lessons/_lesson_card.html.erb
+++ b/app/views/coach/lessons/_lesson_card.html.erb
@@ -1,4 +1,4 @@
-<div class="lesson-card <%= lesson.status ? 'border-green' : 'border-red' %> <%= 'd-none' if lesson.errors.any? %>" data-edit-lesson-target='card'>
+<div class="lesson-card <%= lesson.status ? 'border-green' : 'border-red' %> <%= 'd-none' if lesson.errors.any? %>" data-controller='edit-lesson' data-edit-lesson-target='card'>
         <div class="lesson-date">
           <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
           <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
@@ -25,12 +25,12 @@
                       data: { confirm: "Are you sure?" },
                       class: "btn btn-outline-danger btn-sm" %>
 
-           <%= simple_form_for('coach/lessons', html: { class: lesson.errors.any? ? '' : 'd-none', data: { edit_lesson_target: 'form', action: 'submit->edit-lesson#update' } }) do |f|%>
+           <%= simple_form_for lesson, html: { class: lesson.errors.any? ? '' : 'd-none', data: { edit_lesson_target: 'form', action: 'submit->edit-lesson#update' } } do |f|%>
               <%= f.input :start_date_time, :as => :datetime %>
               <%= f.input :end_date_time, :as => :datetime %>
               <%= f.input :description %>
               <%= f.input :location %>
               <%= f.input :price, as: :numeric %>
-              <%= f.submit class:'btn btn-primary' %>
+              <%= f.submit "Update lesson", class:'btn btn-primary' %>
           <% end %>
 </div>
