--- a/app/views/coach/lessons/_new_lesson_form.html.erb
+++ b/app/views/coach/lessons/_new_lesson_form.html.erb
@@ -1,10 +1,4 @@
-<div class='container form'>
-  <div class='header header-flex'>
-    <h2>Edit lesson</h2>
-    <%= link_to "Back", :back, class:"back-btn" %>
-  </div>
-
-  <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
+<%= simple_form_for(lesson, method: :post, url: :coach_lessons, html: { class: lesson.errors.any? ? '' : 'd-none', data: { new_lesson_target: 'form', action: 'submit->new-lesson#create' } }) do |f|%>
       <%= f.input :start_date_time, :as => :datetime %>
       <%= f.input :end_date_time, :as => :datetime %>
       <%= f.input :description %>
@@ -12,4 +6,4 @@
       <%= f.input :price, as: :numeric %>
       <%= f.submit class:'btn btn-primary' %>
   <% end %>
-</div>
+
