setting up action cable and foundation for chat function

--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -54,3 +54,7 @@
     <% end %>
   <% end %>
 </div>
+
+<div class="chat">
+  <%= link_to "start a chat", coach_chats_path(@coach), method: 'post' %>
+</div>
