--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,12 +1,12 @@
-<h1>#<%= @chatroom.name %></h1>
-<div id="messages" data-chatroom-id="<%= @chatroom.id %>">
-  <% @chatroom.messages.each do |message| %>
-    <div class="message-container" id="message-<%= message.id %>">
-      <i class="author">
-        <span><%= message.user.email %></span>
-        <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-      </i>
-      <p><%= message.content %></p>
-    </div>
+<div class="container">
+  <h1>#<%= @chat.name %></h1>
+  <div id="messages" data-chat-id="<%= @chat.id %>">
+    <% @chat.messages.each do |message| %>
+      <% render "/messages/message", message: message %>
+    <% end %>
+  </div>
+
+  <%= simple_form_for @message, url: coach_chat_messages_path(@coach, @chat), remote: true do |f| %>
+    <%= f.input :content, label: false, placeholder: "Type your message here" %>
   <% end %>
 </div>
