updated lesson model to convert location from string to references

--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -23,7 +23,7 @@
           <% if lesson.student_id %>
             <span>Booked by: <%= lesson.student.name %></span>
           <% end %>
-          <span>Location: <%= lesson.location %></span>
+          <span>Location: <%= lesson.location.name %></span>
         </div>
 
           <%# modal button************************ %>
