--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -3,12 +3,5 @@
     <h2>New lesson</h2>
     <%= link_to "Back", :back, class:"back-btn" %>
   </div>
-  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons) do |f|%>
-      <%= f.input :start_date_time, :as => :datetime %>
-      <%= f.input :end_date_time, :as => :datetime %>
-      <%= f.input :description %>
-      <%= f.input :location %>
-      <%= f.input :price, as: :numeric %>
-      <%= f.submit class:'btn btn-primary' %>
-  <% end %>
+  <%= render "form" %>
 </div>
