--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import 'node_modules/select2/dist/css/select2.css';
 
 a:-webkit-any-link {
     text-decoration: none;
