added back to my lessons btn

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -13,6 +13,8 @@
       </ul>
       <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
   </div>
+  <br>
+  <%= link_to 'My Lessons', lessons_path, class: 'btn btn-flat' %>
     </div>
   </div>
 </div>
