--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
  <div class='header header-flex'>
-    <h1><%= @coach.name.capitalize %>'s Profile</h1>
+    <h1><%= @coach.name.capitalize %>'s pppProfile</h1>
     <%= link_to "Back", :back, class:"back-btn" %>
   </div>
   <div class="user-information">
