--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,6 +51,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <div class='dropdown-item'>Logged in: <strong><%= current_user.name %></strong></div>
             <%= link_to "My Profile", edit_user_registration_path, class: "dropdown-item"  %>
+            <%= link_to "My Chats", user_chats_path(current_user), class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
