--- a/app/views/coach/lessons/_lesson_card.html.erb
+++ b/app/views/coach/lessons/_lesson_card.html.erb
@@ -1,4 +1,4 @@
-<div class="lesson-card <%= lesson.status ? 'border-green' : 'border-red' %> <%= 'd-none' if lesson.errors.any? %>" data-controller='edit-lesson' data-edit-lesson-target='card'>
+<div class="lesson-card <%= lesson.status ? 'border-green' : 'border-red' %> <%= 'd-none' if lesson.errors.any? %>"  data-controller='edit-lesson', data-edit-lesson-target='card'>
         <div class="lesson-date">
           <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
           <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
@@ -28,14 +28,14 @@
                   </div>
                   <div class="modal-body">
                         <%= render partial: 'form', locals: { lesson: lesson } %>
-                    </div>
+                        </div>
                   <div class="modal-footer">
                   </div>
                 </div>
               </div>
             </div>
-          <button class='btn-outline-secondary btn-sm' data-toggle="modal" data-target="#editModal<%=lesson.id%>" data-action="click->edit-lesson#displayForm">Edit stim</button>
-          <%= link_to 'Edit Stim', "#", class:'btn btn-outline-secondary btn-sm', data: {toggle: 'modal', target: "#editModal#{lesson.id}", action: "click->edit-lesson#displayForm"} %>
+          
+          <%= link_to 'Edit Stim',  edit_coach_lesson_path(lesson), class:'btn btn-outline-secondary btn-sm',  data: { edit_lesson_target: "editBtn", action: "click->edit-lesson#displayForm", }, remote: true %>
           <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-outline-secondary btn-sm") %>
           <%= link_to "Delete",
                       coach_lesson_path(lesson),
@@ -43,8 +43,4 @@
                       data: { confirm: "Are you sure?" },
                       class: "btn btn-outline-danger btn-sm" %>
 
-                      <%# <%= render 'modal_details' %> 
-
-                      <%# modal %>
-         
 </div>
