--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -27,7 +27,7 @@
         </div>
 
           <%# modal button************************ %>
-          <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
+          <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#exampleModal<%= lesson.id %>">
             Details
           </button>
 
@@ -42,7 +42,7 @@
 
 
     <%# modal*********************** %>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal<%= lesson.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -57,6 +57,7 @@
             </button>
           </div>
           <div class="modal-body">
+              <p><strong>Lesson Id:</strong> <%= lesson.id %> </p>
               <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%-d.%I%p") %> - <%= lesson.end_date_time.strftime("%-d.%I%p") %> </p>
               <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
               <% if current_page?(coach_lessons_path)%>
@@ -64,7 +65,7 @@
                 <% if lesson.student %>
                   <%= lesson.student.name %>
                 <% else %>
-                  No student
+                  Not booked
                 <% end %>
                 </p>
               <% else %>
@@ -72,6 +73,11 @@
                   <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %>
               <% end %>
               <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
+              <% if lesson.order %>
+                <p><strong>Payment Status:</strong> <%= lesson.order.state %></p>
+              <% else %>
+                <p><strong>Payment Status:</strong> Not applicable</p>
+              <% end %>
               <p><strong>Description:</strong> <%= lesson.description %></p>
           </div>
           <div class="modal-footer">
